Update error flash message image tfrom triangle warning to circle warning

--- a/frontend/components/FlashMessage/_styles.scss
+++ b/frontend/components/FlashMessage/_styles.scss
@@ -76,6 +76,11 @@
     .fleeticon {
       font-size: $small;
     }
+
+    img {
+      width: 16px;
+      height: 16px;
+    }
   }
 
   &__undo {
