--- a/frontend/components/queries/PackQueriesListWrapper/_styles.scss
+++ b/frontend/components/queries/PackQueriesListWrapper/_styles.scss
@@ -7,51 +7,100 @@
     margin: 0 0 20px;
   }
 
-  &__query-count {
-    font-size: $x-small;
-    font-weight: $bold;
-    margin: $pad-large 0;
-  }
-
-  &__queries-list-wrapper {
-    margin-top: $pad-medium;
-    clear: both;
-  }
-
-  &__search-queries-input {
-    display: inline-block;
-    width: 100%;
-
-    input {
-      width: 100%;
+  .data-table-block {
+    .data-table__table {
+      thead {
+        .name__header {
+          width: $col-lg;
+        }
+        .interval__header {
+          width: 0;
+          border-right: none;
+        }
+        .platform_string__header {
+          display: none;
+          width: 0;
+        }
+        .logging_string__header {
+          display: none;
+          width: 0;
+        }
+        .performance__header {
+          display: none;
+          width: 0;
+        }
+        .actions__header {
+          width: auto;
+        }
+        @media (min-width: $break-990) {
+          .interval__header {
+            border-right: 1px solid $ui-fleet-blue-15;
+          }
+          .performance__header {
+            display: table-cell;
+            width: $col-md;
+            border-right: none;
+          }
+        }
+        @media (min-width: $break-1400) {
+          .platform_string__header,
+          .logging_string__header {
+            display: table-cell;
+          }
+        }
+      }
+      tbody {
+        .name__cell {
+          width: $col-lg;
+        }
+        .interval__cell {
+          width: 0;
+        }
+        .platform_string__cell {
+          display: none;
+          width: 0;
+        }
+        .logging_string__cell {
+          display: none;
+          width: 0;
+        }
+        .performance__cell {
+          display: none;
+          width: 0;
+        }
+        .actions__cell {
+          width: auto;
+        }
+        @media (min-width: $break-990) {
+          .performance__cell {
+            display: table-cell;
+            width: $col-md;
+          }
+        }
+        @media (min-width: $break-1400) {
+          .platform_string__cell,
+          .logging_string__cell {
+            display: table-cell;
+          }
+        }
+      }
     }
-  }
 
-  &__query-btn {
-    float: right;
-    margin-top: 14px;
-  }
+    a {
+      color: $core-vibrant-blue;
+      font-size: $x-small;
+      text-decoration: none;
+    }
 
-  &__search-queries {
-    float: left;
+    &__empty-table {
+      text-align: center;
+      font-size: $x-small;
+      color: $core-fleet-black;
+    }
   }
 
   &__no-queries {
     font-size: $x-small;
     font-weight: $bold;
-  }
-
-  .queries-table__performance-impact-header {
-    margin-right: $pad-small;
-  }
-
-  .queries-table__performance-impact-tooltip {
-    font-weight: 400;
-  }
-
-  .column-with-tooltip {
-    height: 0;
-    position: relative;
-    top: -10px;
   }
 }
