--- a/frontend/pages/packs/ManagePacksPage/_styles.scss
+++ b/frontend/pages/packs/ManagePacksPage/_styles.scss
@@ -6,68 +6,13 @@
     align-items: center;
   }
 
-  &__selected-count {
-    padding: 0 $pad-medium;
-  }
-
   &__header-wrap {
     display: flex;
     justify-content: space-between;
-    align-items: center;
-  }
-
-  &__pack-count {
-    color: $core-fleet-black;
-    font-size: $x-small;
-    margin: 0;
-    padding: $pad-xlarge 0 0 0;
-  }
-
-  &__search-create-section {
-    position: relative;
-
-    input {
-      &[name="pack-filter"] {
-        width: 100%;
-        margin-top: $pad-large;
-        padding-left: 42px;
-      }
-    }
-
-    &::before {
-      display: inline-block;
-      position: absolute;
-      padding: 5px 0 0 0;
-      content: url(../assets/images/icon-search-fleet-black-16x16@2x.png);
-      transform: scale(0.5);
-      top: 22px;
-      left: 8px;
-    }
-  }
-
-  &__title {
-    font-size: $large;
-
-    .fleeticon {
-      color: $core-fleet-blue;
-      margin-right: 15px;
-    }
-
-    .fleeticon-success-check {
-      color: $ui-success;
-    }
-
-    .fleeticon-offline {
-      color: $ui-error;
-    }
-
-    .fleeticon-mia {
-      color: $core-fleet-black;
-    }
   }
 
   &__description {
-    margin: 0 0 $pad-medium;
+    margin: 0 0 40px;
     padding-top: $pad-xsmall;
 
     h2 {
@@ -83,16 +28,6 @@
       font-size: $x-small;
       font-style: italic;
     }
-  }
-
-  &__wrapper {
-    padding: $pad-xxlarge 30px;
-  }
-
-  &__table {
-    color: $core-fleet-black;
-    font-size: $small;
-    width: 100%;
   }
 
   &__modal-btn-wrap {
