--- a/frontend/pages/hosts/details/cards/Software/SoftwareVulnCount/_styles.scss
+++ b/frontend/pages/hosts/details/cards/Software/SoftwareVulnCount/_styles.scss
@@ -24,7 +24,7 @@
     display: flex;
     align-content: center;
     align-items: center;
-    font-size: $small;
+    font-size: $x-small;
     font-weight: $bold;
   }
 }
