--- a/frontend/pages/admin/UserManagementPage/_styles.scss
+++ b/frontend/pages/admin/UserManagementPage/_styles.scss
@@ -78,6 +78,9 @@
           display: none;
           width: 0;
         }
+        .actions__header {
+          width: auto;
+        }
         @media (min-width: $break-990) {
           .role__header {
             border-right: 1px solid $ui-fleet-blue-15;
@@ -104,21 +107,21 @@
           }
           .email__header {
             display: table-cell;
-            width: $col-md;
+            width: $col-lg;
             border-right: none;
           }
         }
       }
       tbody {
         .name__cell {
-          width: $col-md;
+          max-width: $col-md;
         }
         .role__cell {
-          width: $col-md;
+          max-width: $col-md;
         }
         .teams__cell {
           display: none;
-          width: 0;
+          max-width: $col-md;
           .grey-cell {
             color: $ui-fleet-black-50;
             font-style: italic;
@@ -126,28 +129,28 @@
         }
         .status__cell {
           display: none;
-          width: 0;
+          max-width: $col-md;
         }
         .email__cell {
           display: none;
-          width: 0;
+          max-width: $col-md;
+        }
+        .actions__cell {
+          width: auto;
         }
         @media (min-width: $break-990) {
           .teams__cell {
             display: table-cell;
-            width: $col-md;
           }
         }
         @media (min-width: $break-1400) {
           .status__cell {
             display: table-cell;
-            width: $col-md;
           }
         }
         @media (min-width: $break-1600) {
           .email__cell {
             display: table-cell;
-            width: $col-md;
           }
         }
       }
