--- a/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/MembersPage/_styles.scss
+++ b/frontend/pages/admin/TeamManagementPage/TeamDetailsWrapper/MembersPage/_styles.scss
@@ -30,6 +30,10 @@
           width: 0;
         }
 
+        .actions__header {
+          width: auto;
+        }
+
         @media (min-width: $break-1400) {
           .role__header {
             border-right: 1px solid $ui-fleet-blue-15;
@@ -45,22 +49,25 @@
 
       tbody {
         .name__cell {
-          width: $col-md;
+          max-width: $col-md;
         }
 
         .role__cell {
-          width: $col-md;
+          max-width: $col-md;
         }
 
         .email__cell {
           display: none;
-          width: 0;
+        }
+
+        .actions__cell {
+          width: auto;
         }
 
         @media (min-width: $break-1400) {
           .email__cell {
             display: table-cell;
-            width: $col-lg;
+            max-width: $col-lg;
           }
         }
       }
