--- a/frontend/pages/admin/TeamManagementPage/_styles.scss
+++ b/frontend/pages/admin/TeamManagementPage/_styles.scss
@@ -23,6 +23,10 @@
           width: 0;
         }
 
+        .actions__header {
+          width: auto;
+        }
+
         @media (min-width: $break-990) {
           .host_count__header {
             border-right: 1px solid $ui-fleet-blue-15;
@@ -38,45 +42,31 @@
 
       tbody {
         .name__cell {
-          width: $col-md;
+          max-width: $col-md;
         }
 
         .host_count__cell {
-          width: $col-md;
+          max-width: $col-md;
         }
 
         .user_count__cell {
           display: none;
-          width: 0;
+        }
+
+        .actions__cell {
+          width: auto;
         }
 
         @media (min-width: $break-990) {
           .user_count__cell {
             display: table-cell;
-            width: $col-md;
+            max-width: $col-md;
           }
         }
       }
     }
   }
 }
-
-// .team-details__team-details {
-//   .form-field--dropdown {
-//     margin-bottom: 0;
-//   }
-// }
-
-// .team-details.team-select-open {
-//   .component__tabs-wrapper {
-//     position: relative;
-//     z-index: 2;
-//   }
-//   .members {
-//     position: relative;
-//     z-index: 1;
-//   }
-// }
 
 .no-teams {
   display: flex;
