--- a/frontend/pages/queries/ManageQueriesPage/_styles.scss
+++ b/frontend/pages/queries/ManageQueriesPage/_styles.scss
@@ -123,7 +123,7 @@
             width: $col-lg;
           }
           .platforms__header {
-            width: $col-md;
+            width: auto;
           }
           .author_name__header {
             display: none;
@@ -138,33 +138,43 @@
             width: 0;
           }
           @media (min-width: $break-990) {
+            .platforms__header {
+              width: $col-md;
+            }
             .author_name__header {
               display: table-cell;
-              width: $col-md;
+              width: auto;
             }
           }
           @media (min-width: $break-1400) {
+            .author_name__header {
+              width: $col-md;
+            }
             .performance__header {
               display: table-cell;
-              width: $col-md;
+              width: auto;
             }
           }
           @media (min-width: $break-1600) {
+            .performance__header {
+              width: $col-md;
+            }
             .updated_at__header {
               display: table-cell;
-              width: $col-md;
+              width: auto;
             }
           }
         }
         tbody {
           .name__cell {
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
+            max-width: $col-lg;
+          }
+          .platforms__cell {
+            max-width: $col-md;
           }
           .author_name__cell {
             display: none;
-            width: 0;
+            max-width: $col-md;
             img,
             div,
             span {
@@ -174,31 +184,31 @@
             div {
               padding-right: $pad-small;
             }
+            .author-name {
+              display: block;
+            }
           }
           .performance__cell {
             display: none;
-            width: 0;
+            max-width: $col-md;
           }
           .updated_at__cell {
             display: none;
-            width: 0;
+            max-width: $col-md;
           }
           @media (min-width: $break-990) {
             .author_name__cell {
               display: table-cell;
-              width: $col-md;
             }
           }
           @media (min-width: $break-1400) {
             .performance__cell {
               display: table-cell;
-              width: $col-md;
             }
           }
           @media (min-width: $break-1600) {
             .updated_at__cell {
               display: table-cell;
-              width: $col-md;
             }
           }
         }
