--- a/frontend/components/TableContainer/_styles.scss
+++ b/frontend/components/TableContainer/_styles.scss
@@ -67,7 +67,7 @@
 
   &__search-input {
     position: relative;
-    color: $core-fleet-blue; // TODO: confirm?
+    color: $core-fleet-blue;
     width: 100%;
     margin-left: $pad-small;
 
