--- a/website/views/pages/get-started.ejs
+++ b/website/views/pages/get-started.ejs
@@ -6,15 +6,15 @@
     <div class="pt-4 pb-4">
       <h2 class="mb-3">1. Install Node (optional) and Docker</h2>
       <p>The quickest way to install Fleet is with Node.js and Docker.</p>
-      <div class="d-sm-flex">
+      <div class="d-sm-flex" purpose="get-started-buttons">
         <a href="https://nodejs.org/en/download/" target="_blank"
-          class="d-flex btn btn-md btn-node justify-content-center align-items-center mr-sm-3">
-          <img class="pr-3" alt="NodeJS logo" src="/images/logo-node-59x36@2x.png" />
+           style="color: #fff; background: #333;" class="d-flex btn btn-md justify-content-center align-items-center mr-sm-3">
+          <img style="height: 36px; width: auto;" class="pr-3 d-inline" alt="NodeJS logo" src="/images/logo-node-59x36@2x.png"/>
           Find my Node installer
         </a>
         <a href="https://docs.docker.com/get-docker/" target="_blank"
-          class="d-flex btn btn-md btn-docker justify-content-center align-items-center mt-3 mt-sm-0">
-          <img class="pr-3" alt="Docker logo" src="/images/logo-docker-51x36@2x.png" />
+          style="color: #fff; background: #0073EC;" class="d-flex btn btn-md justify-content-center align-items-center mt-3 mt-sm-0">
+          <img style="height: 36px; width: auto;" class="pr-3 d-inline" alt="Docker logo" src="/images/logo-docker-51x36@2x.png"/>
           Get Docker
         </a>
       </div>
@@ -27,11 +27,11 @@
     <div>
       <h2 class="pt-3 mb-3">2. Install Fleet</h2>
       <p>To install Fleet:</p>
-      <div class="muted">
-        <p class="comment"># Install the Fleet command-line tool</p>
-        <p class="command">sudo npm install -g fleetctl</p>
-        <p class="comment"># Run a local demo of the Fleet server</p>
-        <p class="command">sudo fleetctl preview</p>
+      <div purpose="terminal-commands">
+        <p class="text-muted"># Install the Fleet command-line tool</p>
+        <p>sudo npm install -g fleetctl</p>
+        <p class="text-muted"># Run a local demo of the Fleet server</p>
+        <p>sudo fleetctl preview</p>
       </div>
       <p class="mb-0"><img alt="A small circle with an 'I' inside of it"
           style="width: 16px; display: inline; margin-right: 8px; margin-bottom: 3px"
@@ -50,14 +50,14 @@
     </div>
     <div style="padding-top: 60px;">
       <h2 class="mb-4">Next steps</h2>
-      <div class="d-sm-flex">
+      <div class="d-sm-flex" purpose="get-started-buttons">
         <a href="/docs/using-fleet/learn-how-to-use-fleet"
           class="d-flex btn btn-primary btn-md justify-content-center mr-sm-3">
           Learn how to use Fleet
         </a>
         <a href="/slack" target="_blank"
-          class="d-flex btn btn-md btn-outline-secondary btn-slack justify-content-center align-items-center mt-3 mt-sm-0">
-          <img class="pr-3" alt="Slack logo" src="/images/logo-slack-24x24@2x.png" />
+          class="d-flex btn btn-md btn-outline-secondary justify-content-center align-items-center mt-3 mt-sm-0">
+          <img style="height: 24px; width: auto;" class="pr-3 d-inline" alt="Slack logo" src="/images/logo-slack-24x24@2x.png" />
           Ask for help on Slack 
         </a>
       </div>
