add custom blockquote render and styles

--- a/website/assets/styles/pages/docs/basic-documentation.less
+++ b/website/assets/styles/pages/docs/basic-documentation.less
@@ -417,7 +417,26 @@
         padding-top: 0px;
       }
       blockquote {
-        margin: 0px;
+        background: @core-vibrant-blue-10;
+        border: 1px solid @core-vibrant-blue-25;
+        padding: 16px;
+        border-radius: 4px;
+        display: inline-flex;
+        align-items: center;
+        img {
+          display: flex;
+          margin-right: 10px;
+          margin-left: 0px;
+          height: 16px;
+          width: 16px;
+          padding: 0px;
+        }
+        p {
+          display: block;
+          margin-bottom: 0px;
+          line-height: 24px;
+          font-size: 16px;
+        }
       }
 
       ul {
