remove `width: auto`

--- a/website/views/pages/get-started.ejs
+++ b/website/views/pages/get-started.ejs
@@ -9,12 +9,12 @@
       <div class="d-sm-flex" purpose="get-started-buttons">
         <a href="https://nodejs.org/en/download/" target="_blank"
            style="color: #fff; background: #333;" class="d-flex btn btn-md justify-content-center align-items-center mr-sm-3">
-          <img style="height: 36px; width: auto;" class="pr-3 d-inline" alt="NodeJS logo" src="/images/logo-node-59x36@2x.png"/>
+          <img style="height: 36px;" class="pr-3 d-inline" alt="NodeJS logo" src="/images/logo-node-59x36@2x.png"/>
           Find my Node installer
         </a>
         <a href="https://docs.docker.com/get-docker/" target="_blank"
           style="color: #fff; background: #0073EC;" class="d-flex btn btn-md justify-content-center align-items-center mt-3 mt-sm-0">
-          <img style="height: 36px; width: auto;" class="pr-3 d-inline" alt="Docker logo" src="/images/logo-docker-51x36@2x.png"/>
+          <img style="height: 36px;" class="pr-3 d-inline" alt="Docker logo" src="/images/logo-docker-51x36@2x.png"/>
           Get Docker
         </a>
       </div>
@@ -57,7 +57,7 @@
         </a>
         <a href="/slack" target="_blank"
           class="d-flex btn btn-md btn-outline-secondary justify-content-center align-items-center mt-3 mt-sm-0">
-          <img style="height: 24px; width: auto;" class="pr-3 d-inline" alt="Slack logo" src="/images/logo-slack-24x24@2x.png" />
+          <img style="height: 24px;" class="pr-3 d-inline" alt="Slack logo" src="/images/logo-slack-24x24@2x.png" />
           Ask for help on Slack 
         </a>
       </div>
